Repo for building base GeoNode GeoServer image